Fixed menu bar behavior on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ html, body {
 	color: white;
 	/*z-index: 2;*/
 	/*position: relative;*/
-	top: 49px;
+	top: 50px;
 	left: 60px;
 	padding: 0px 10px 0px 10px;
 	border-bottom-right-radius: 5px;
@@ -29,6 +29,11 @@ html, body {
 #optionsDiv input {
 	position: relative; 
 	/*z-index: 100;*/
+}
+
+#optionsDiv span, label {
+    /*padding-top: 10px;*/
+    line-height: 150%;
 }
 
 #overviewDiv {
@@ -91,12 +96,13 @@ ul.topnav{
 	padding: 0;
 	overflow: hidden;
 	background-color: #003262;
-    /*height: 10%;*/
+    height: 50px;
 }
 
 ul.topnav li {
-	margin-right: 40px;
+	margin-right: 20px;
 	float: right;
+    /*left: 40px;*/
 }
 
 ul.topnav li a, .dropbtnHover{
@@ -122,35 +128,62 @@ ul.topnav li.icon {display: none;}
 /* When the screen is less than 680 pixels wide, hide all list items, except for the first one ("Home"). 
 Show the list item that contains the link to open and close the topnav (li.icon) */
 @media screen and (max-width:680px) {
-    #overviewDiv {display: none}
-	ul.topnav li:not(:first-child) {display: none;}
+    /*.dropdown {margin-right: 0px;}*/
+    #overviewDiv {display: none;}
+    #optionsDiv {display: none;}
+	ul.topnav li:not(:first-child) {
+        display: none;
+    }
+    #title {
+        display: block;
+    }
   	ul.topnav li.icon {
-    		float: right;
+    		/*float: right;*/
+            float: left;
     		display: inline-block;
   	}
+}
+
+@media screen and (max-width:460px) {
+    #title {
+        display: none;
+    }
 }
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. 
 This class makes the topnav look good on small screens */
 @media screen and (max-width:680px) {
-	ul.topnav.responsive {position: relative;}
+	ul.topnav.responsive {
+        position: relative;
+        height: auto;
+        /*margin: 0px;*/
+    }
   	ul.topnav.responsive li.icon {
   		position: absolute;
-    		right: 0;
-    		top: 0;
-    	}
-    	ul.topnav.responsive li {
-    		float: none;
-    		display: inline;
-    	}
+    	left: 0;
+    	top: 0;
+    }
+    ul.topnav.responsive li{
+        margin: 0;
+    	float: none;
+    	display: inline;
+    }
   	ul.topnav.responsive li a {
   		display: block;
-    		text-align: left;
-    	}
+    	text-align: right;
+    }
+    ul.topnav.responsive #title {
+        position: absolute;
+    }
+    ul.topnav.responsive li div.dropdnHover-content {
+        position: relative;
+    }
 }
 
 /* Dropdown Button */
 .dropbtn {
+    position: absolute;
+    left: 60px;
     background-color: #4CAF50;
     color: white;
     padding: 16px;
@@ -168,8 +201,8 @@ This class makes the topnav look good on small screens */
 
 
 .dropdown {
-    margin-left: 60px;
-    float: left;
+    /*margin-right: 20px;*/
+    /*float: left;*/
 }
 
 .dropdown-content {
@@ -180,10 +213,10 @@ This class makes the topnav look good on small screens */
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
-.show {
+/*.show {
 	display:none;
 }
-
+*/
 /*.esri-view-height-small .esri-popup .esri-popup-content .esri-popup-main {
     max-height: 350px;
 }*/
@@ -237,6 +270,7 @@ This class makes the topnav look good on small screens */
     position: absolute;
     width: 300px;
     max-height: 600px;
+    overflow: auto;
     /*background-color: white;*/
     right: 20px;
     top: 100px;
@@ -256,12 +290,18 @@ This class makes the topnav look good on small screens */
 	display: none;
 }*/
 
-#tribeTable {
+#tribeTable, #victimTable, #injurTable {
 	display: none;
 }
 
 #printResults {
 	margin: 0.5em;
+}
+
+#info span {
+    /*padding-left: 10px;*/
+    color: #666666;
+    text-align: center;
 }
 
 table {
@@ -349,9 +389,9 @@ tr:nth-child(even) {
 	/*color: #b8e0b9;*/
 	color: #ffffe6;
 	font-size: 30px;
-	float: left;
+	/*float: right;*/
 	margin-top: 6px;
-	margin-left: 18%;
+	margin-right: 10%;
 	letter-spacing: 4px;
 }
 
@@ -376,3 +416,13 @@ tr:nth-child(even) {
 	display: inline-block;
 	padding: 10px 10px;
 }
+
+.checkbox {
+    float: left;
+    clear: both;
+    margin-top: 2px;
+}
+
+/*#block {
+    float: left;
+}*/
